src-errormsg/E08-MissingEq/Plinth.err

/Users/sho/io/plinth-plutarch-paper-code/src-errormsg/E08-MissingEq/Plinth.hs:12:17: error: [GHC-39999]
    • No instance for ‘Eq a’ arising from a use of ‘==’
      Possible fix:
        add (Eq a) to the context of
          the type signature for:
            isEqual :: forall a. a -> a -> Bool
    • In the expression: x == y
      In an equation for ‘isEqual’: isEqual x y = x == y
   |
12 | isEqual x y = x == y
   |                 ^^
